<resources>
    <string name="app_name">Demo</string>
    <string name="my_words">
        The real winter is coming.Click Me.
    </string>
    <string name="net_notice">正在监听网络变化</string>
    <string name="broadcast_send">点击发送广播</string>
    <string name="broadcast_send_local">发送本地广播</string>
    <string name="force_offline">强制推出</string>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- hint -->
    <string name="save_data">Type something here.</string>

    <!-- SQLite -->
    <string name="SQLite_show">SQLite</string>
    <string name="create_database">创建数据库</string>
    <string name="add_data">添加数据</string>
    <string name="update_data">更新数据</string>
    <string name="delete_data">删除数据</string>
    <string name="query_data">查询数据</string>

    <!--LitePal-->
    <string name="lite_pal_show">LitePal</string>

    <!-- Notification -->
    <string name="send_notification">发送通知</string>

    <!-- Camera -->
    <string name="camera_take_photo">拍照</string>
    <string name="camera_choose_photo">相册</string>

    <!-- Media -->
    <string name="video_play">播放</string>
    <string name="video_pause">暂停</string>
    <string name="video_replay">重播</string>
</resources>
